test/good/classes/constructor04.px

class A def
    x: Int

    constructor def
        print this.x


class B: A def
    y: Rat

    constructor def
        print this.y.fraction


a = A()
a = B(1, 2)
