test/bad/classes/struct07.px

class A def
    Int x

A(1, 2)
